# de_zoomcamp_homework

./: .gitignore
Module_1-Docker_SQL_Terraform/: README.md  data_ingest.ipynb  ny_taxi_questions.ipynb  pyproject.toml
Module_3-Data_Warehousing/: README.md  ny-taxi-ingest.py  pyproject.toml
Module_4-Analytics_Engineering/: README.md  ny-taxi-ingest.py  pyproject.toml  quick_ingest.py  quick_ingest_fhv.py
Module_4-Analytics_Engineering/taxi_rides_ny/: dbt_project.yml
Module_4-Analytics_Engineering/taxi_rides_ny/macros/: generate_surrogate_key.sql
Module_4-Analytics_Engineering/taxi_rides_ny/models/marts/reporting/: fct_monthly_zone_revenue.sql
Module_4-Analytics_Engineering/taxi_rides_ny/models/staging/: sources.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql
Module_5-Data_Platforms/: pyproject.toml
Module_5-Data_Platforms/zoomcamp/pipeline/: pipeline.yml
Module_5-Data_Platforms/zoomcamp_ai/pipeline/: pipeline.yml
Module_5-Data_Platforms/zoomcamp_ai/pipeline/assets/ingestion/: payment_lookup.asset.yml  requirements.txt  trips.py
Module_5-Data_Platforms/zoomcamp_diy/pipeline/: pipeline.yml
Module_6-Batch_Processing/: ny_taxi_data.ipynb  pyproject.toml  test_spark.py
Module_7-Streaming/: Dockerfile.flink  ny_taxi_stream.ipynb  pyproject.toml
Module_7-Streaming/src/: models.py
Module_7-Streaming/src/consumers/: consumer.py  consumer_postgres.py
Module_7-Streaming/src/job/: pass_through_job.py  q4_job.py  q5_job.py  q6_job.py
Module_7-Streaming/src/producers/: producer.py
Workshop-Data_Ingestion/: pyproject.toml  taxi_pipeline.py
(+2 files in other folders)
