[project]
name = "module-4-analytics-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.4",
    "dbt-duckdb>=1.10.0",
    "dlt[bigquery,duckdb,gs]>=1.21.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
]
